k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: db # This name is CRITICAL. The API will look for host "db"
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  clusterIP: None # Headless service for internal comms

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        # Load environment variables from the same secret as the API
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        # For Local K8s (Docker Desktop), we use hostPath. 
        # For Cloud, we will change this later.
        hostPath:
          #path: /run/desktop/mnt/host/c/Users/thiag/Desktop/DEVOPS/GenAI/postgres_k8s_data
          path: /home/ubuntu/genai_data/postgres
          type: DirectoryOrCreate
