k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newscenter-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - 247newsbot.monteiro.dev.br
      secretName: newsbot-monteiro-dev-br-tls
  rules:
    - host: 247newsbot.monteiro.dev.br
      http:
        paths:
          # Backend API routes
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: newscenter-service
                port:
                  number: 8000
          # Frontend routes
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newsbot-frontend-service
                port:
                  number: 3000
    - host: newsbot.local
      http:
        paths:
          # Backend API routes
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: newscenter-service
                port:
                  number: 8000
          # Frontend routes
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newsbot-frontend-service
                port:
                  number: 3000
